--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="Sergey Shmidt"
-      content="musician.poet.
-      composer."
-    />
+    <meta name="Sergey Shmidt" content="musician.poet.composer." />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#191b25" />
     <meta name="msapplication-TileColor" content="#191b25" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#191b25" />
     <title>Sergey Shmidt</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
   </body>
 </html>
